<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_number_title"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/number"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_command_title"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:gravity="center"
        android:text="@string/team"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_i_title"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/p"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_v_title"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/w"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_n_title"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/d"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_p_title"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/l"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_balls_title"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:maxWidth="30dp"
        android:text="@string/pl_min"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_o_title"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/p"
        android:textStyle="bold" />


</androidx.appcompat.widget.LinearLayoutCompat>